--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -174,9 +174,11 @@ nav li {
     font-size: 1.2em;
 }
 
-li:hover {
+li:hover,
+nav a:hover {
     color: #b1663c;
 }
+
 #introduction {
     display: flex;
     align-items: center;
@@ -204,6 +206,7 @@ li:hover {
     text-align: center;
     margin-bottom: 1em;
 }
+
 .gallery {
     width: 100%;
     display: grid;
@@ -215,32 +218,54 @@ li:hover {
 .gallery img {
     width: 100%;
 }
-#contact {
+
+/*** Contact and Login page ***/
+#contact,
+#login {
     width: 50%;
     margin: auto;
 }
-#contact > * {
+
+#login {
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+
+#contact,
+#login > * {
     text-align: center;
 }
-#contact h2 {
+
+#contact h2,
+#login h2 {
     margin-bottom: 20px;
 }
-#contact form {
+
+#contact form,
+#login form {
     text-align: left;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
 }
 
-#contact input {
+#contact input,
+#login input {
     height: 50px;
     font-size: 1.2em;
     border: none;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+
+#contact label,
+#login label {
     margin: 2em 0 1em 0;
 }
+
+#login a {
+    display: block;
+}
+
 #contact textarea {
     border: none;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
@@ -267,6 +292,7 @@ footer nav ul {
 .filters {
     display: flex;
     justify-content: center;
+    gap: 10px;
     margin: 50px;
 }
 
@@ -288,4 +314,11 @@ footer nav ul {
 button[id="0"] {
     background-color: #1d6154;
     color: white;
+}
+
+/*** Disactivated links style ***/
+nav a,
+h1 a {
+    text-decoration: none;
+    color: inherit;
 }
