--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -347,11 +347,11 @@ h1 a {
 }
 
 .editModeBanner i,
-.editProjects i {
+.openModal1 i {
     margin-right: 8px; /* Space between text and icon*/
 }
 
-.editProjects {
+.openModal1 {
     font-size: 0.5em;
     color: #000000;
     margin-left: 20px;
