--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -1,18 +1,23 @@
 .modal {
     display: flex;
     justify-content: center;
-    position: absolute;
-    background-color: white;
-    border-radius: 1em;
-    width: 40%;
-    height: 40em;
+    position: fixed;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
 }
 
 .modalWrapper {
-    width: 100%;
+    width: 70%;
+    background-color: white;
+    border-radius: 1em;
 }
 
 #modalTitle {
+    text-align: center;
     color: black;
     font-weight: 400;
 }
@@ -20,10 +25,16 @@
 .xClose {
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 1em;
+    margin: 1em 1em 1em 0em;
 }
 
 .modalButtons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.photoGallery {
     display: flex;
     flex-wrap: wrap;
     border-bottom: 1px solid black;
