--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -7,16 +7,18 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .modalWrapper {
-    width: 70%;
+    width: 60%;
     background-color: white;
     border-radius: 1em;
+    padding: 2em;
 }
 
 #modalTitle {
+    margin: 1em 0em 1em 0em;
     text-align: center;
     color: black;
     font-weight: 400;
@@ -25,7 +27,7 @@
 .xClose {
     display: flex;
     justify-content: flex-end;
-    margin: 1em 1em 1em 0em;
+    margin: 1em;
 }
 
 .modalButtons {
