--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -269,6 +269,13 @@ nav a:hover {
 #contact textarea {
     border: none;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+    padding: 1em;
+}
+
+#name,
+#password,
+#email {
+    padding-left: 1em;
 }
 
 input[type="submit"] {
