--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -164,3 +164,10 @@ input[type="file"] {
     box-sizing: border-box;
     height: 100%;
 }
+
+/* Style for input and select when they are invalid */
+.modalForm input.touched:invalid,
+.modalForm select.touched:invalid {
+    border: 1px solid red;
+    box-shadow: 0px 4px 14px rgba(244, 1, 1, 0.09);
+}
